bit of an adjustment to the Runtime namespace

--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -118,24 +118,24 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecordingChannel.cs" />
     <Compile Include="RecordingReceiver.cs" />
-    <Compile Include="Runtime\BasicJsonMessageSerializerTester.cs" />
-    <Compile Include="Runtime\BinarySerializerTester.cs" />
-    <Compile Include="Runtime\CascadingHandlerInvokerTester.cs" />
+    <Compile Include="Runtime\Serializers\BasicJsonMessageSerializerTester.cs" />
+    <Compile Include="Runtime\Serializers\BinarySerializerTester.cs" />
+    <Compile Include="Runtime\Invocation\CascadingHandlerInvokerTester.cs" />
     <Compile Include="Runtime\Delayed\DelayedEnvelopeProcessorTester.cs" />
     <Compile Include="Runtime\Delayed\Delayed_Processing_Job_Registration_Tester.cs" />
-    <Compile Include="Runtime\MessageInvokerTester.cs" />
+    <Compile Include="Runtime\Invocation\MessageInvokerTester.cs" />
     <Compile Include="Runtime\SubscriptionsIntegrationTester.cs" />
     <Compile Include="Runtime\EnvelopeSenderTester.cs" />
-    <Compile Include="Runtime\EnvelopeSerializerIntegratedTester.cs" />
-    <Compile Include="Runtime\EnvelopeSerializerTester.cs" />
+    <Compile Include="Runtime\Serializers\EnvelopeSerializerIntegratedTester.cs" />
+    <Compile Include="Runtime\Serializers\EnvelopeSerializerTester.cs" />
     <Compile Include="Runtime\EnvelopeTester.cs" />
     <Compile Include="Runtime\EventAggregatorTester.cs" />
     <Compile Include="Runtime\generic_handlers_are_called_for_messages_that_match.cs" />
-    <Compile Include="Runtime\handling_a_batch_of_messages.cs" />
-    <Compile Include="Runtime\Headers_testing.cs" />
-    <Compile Include="Runtime\InMemoryReplyQueueIntegratedTester.cs" />
-    <Compile Include="Runtime\multiple_handlers_for_one_message.cs" />
-    <Compile Include="Runtime\HandlerArgumentsTester.cs" />
+    <Compile Include="Runtime\Invocation\handling_a_batch_of_messages.cs" />
+    <Compile Include="Runtime\Headers\Headers_testing.cs" />
+    <Compile Include="InMemory\InMemoryReplyQueueIntegratedTester.cs" />
+    <Compile Include="Runtime\Invocation\multiple_handlers_for_one_message.cs" />
+    <Compile Include="Runtime\Invocation\HandlerArgumentsTester.cs" />
     <Compile Include="Runtime\ReceiverTester.cs" />
     <Compile Include="Runtime\RecordingEnvelopeSender.cs" />
     <Compile Include="Runtime\ReplyListenerTester.cs" />
@@ -143,9 +143,9 @@
     <Compile Include="Runtime\Routing\LambdaRoutingRuleTester.cs" />
     <Compile Include="Runtime\Routing\NamespaceRuleTester.cs" />
     <Compile Include="Runtime\Routing\SingleTypeRoutingRuleTester.cs" />
-    <Compile Include="Runtime\simplest_possible_invocation.cs" />
-    <Compile Include="Runtime\InvocationContext.cs" />
-    <Compile Include="Runtime\SimpleHandlerInvokerTester.cs" />
+    <Compile Include="Runtime\Invocation\simplest_possible_invocation.cs" />
+    <Compile Include="Runtime\Invocation\InvocationContext.cs" />
+    <Compile Include="Runtime\Invocation\SimpleHandlerInvokerTester.cs" />
     <Compile Include="Runtime\when_requesting_a_response.cs" />
     <Compile Include="Runtime\when_sending_with_the_expectation_of_a_response.cs" />
     <Compile Include="Runtime\when_starting_the_subscriptions.cs" />
@@ -183,7 +183,7 @@
     <Compile Include="ScenarioSupport\SimpleHandler.cs" />
     <Compile Include="ScenarioSupport\TestMessageRecorder.cs" />
     <Compile Include="ScenarioSupport\GenericHandler.cs" />
-    <Compile Include="Runtime\XmlMessageSerializerTester.cs" />
+    <Compile Include="Runtime\Serializers\XmlMessageSerializerTester.cs" />
     <Compile Include="ServiceBus_Consume_right_now_Mr_Tester.cs" />
     <Compile Include="StandinTester.cs" />
     <Compile Include="ScenarioSupport\ThreeHandler.cs" />
