--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -93,7 +93,7 @@
     <Compile Include="Runtime\Delayed\DelayedEnvelopeProcessor.cs" />
     <Compile Include="Runtime\Delayed\DelayedEnvelopeReceived.cs" />
     <Compile Include="Polling\PollingJobLogger.cs" />
-    <Compile Include="Runtime\ChainExecutionWatcher.cs" />
+    <Compile Include="Runtime\Invocation\ChainExecutionWatcher.cs" />
     <Compile Include="Sagas\ISagaRepository.cs" />
     <Compile Include="Sagas\ISagaStorage.cs" />
     <Compile Include="Sagas\IStatefulSaga.cs" />
@@ -135,38 +135,38 @@
     <Compile Include="SynchronousEventAggregator.cs" />
     <Compile Include="TestSupport\MessageWatcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Runtime\BasicJsonMessageSerializer.cs" />
-    <Compile Include="Runtime\BatchHandler.cs" />
-    <Compile Include="Runtime\BinarySerializer.cs" />
-    <Compile Include="Runtime\CascadingHandlerInvoker.cs" />
+    <Compile Include="Runtime\Serializers\BasicJsonMessageSerializer.cs" />
+    <Compile Include="Runtime\Invocation\BatchHandler.cs" />
+    <Compile Include="Runtime\Serializers\BinarySerializer.cs" />
+    <Compile Include="Runtime\Invocation\CascadingHandlerInvoker.cs" />
     <Compile Include="Configuration\ChannelNode.cs" />
     <Compile Include="Runtime\Subscriptions.cs" />
-    <Compile Include="Runtime\DictionaryHeaders.cs" />
+    <Compile Include="Runtime\Headers\DictionaryHeaders.cs" />
     <Compile Include="Runtime\Envelope.cs" />
-    <Compile Include="Runtime\EnvelopeSerializer.cs" />
-    <Compile Include="Runtime\HandlerArguments.cs" />
+    <Compile Include="Runtime\Serializers\EnvelopeSerializer.cs" />
+    <Compile Include="Runtime\Invocation\HandlerArguments.cs" />
     <Compile Include="Runtime\IChannel.cs" />
     <Compile Include="Runtime\ISubscriptions.cs" />
     <Compile Include="Runtime\IEnvelopeSender.cs" />
-    <Compile Include="Runtime\IHeaders.cs" />
-    <Compile Include="Runtime\IMessageCallback.cs" />
-    <Compile Include="Runtime\IMessageInvoker.cs" />
-    <Compile Include="Runtime\IMessageSerializer.cs" />
-    <Compile Include="Runtime\IInvocationContext.cs" />
+    <Compile Include="Runtime\Headers\IHeaders.cs" />
+    <Compile Include="Runtime\Invocation\IMessageCallback.cs" />
+    <Compile Include="Runtime\Invocation\IMessageInvoker.cs" />
+    <Compile Include="Runtime\Serializers\IMessageSerializer.cs" />
+    <Compile Include="Runtime\Invocation\IInvocationContext.cs" />
     <Compile Include="Runtime\IReceiver.cs" />
     <Compile Include="Runtime\ITransport.cs" />
-    <Compile Include="Runtime\MessageInvoker.cs" />
-    <Compile Include="Runtime\NameValueHeaders.cs" />
+    <Compile Include="Runtime\Invocation\MessageInvoker.cs" />
+    <Compile Include="Runtime\Headers\NameValueHeaders.cs" />
     <Compile Include="Runtime\Receiver.cs" />
     <Compile Include="Runtime\Routing\AssemblyRule.cs" />
     <Compile Include="Runtime\Routing\IRoutingRule.cs" />
     <Compile Include="Runtime\Routing\LambdaRoutingRule.cs" />
     <Compile Include="Runtime\Routing\NamespaceRule.cs" />
     <Compile Include="Runtime\Routing\SingleTypeRoutingRule.cs" />
-    <Compile Include="Runtime\SimpleHandlerInvoker.cs" />
+    <Compile Include="Runtime\Invocation\SimpleHandlerInvoker.cs" />
     <Compile Include="Runtime\UnknownChannelException.cs" />
-    <Compile Include="Runtime\UnknownContentTypeException.cs" />
-    <Compile Include="Runtime\XmlMessageSerializer.cs" />
+    <Compile Include="Runtime\Serializers\UnknownContentTypeException.cs" />
+    <Compile Include="Runtime\Serializers\XmlMessageSerializer.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="TransportActivator.cs" />
     <Compile Include="TransportSettings.cs" />
