Changed dependency to LightningQueues and renamed accordingly

--- a/src/FubuTransportation.LightningQueues.Testing/ripple.dependencies.config
+++ b/src/FubuTransportation.LightningQueues.Testing/ripple.dependencies.config
@@ -1,15 +1,14 @@
 Bottles
-Common.Logging
 FubuCore
 FubuLocalization
 FubuMVC.Core
 FubuMVC.StructureMap
 FubuTestingSupport
 HtmlTags
+LightningQueues
+ManagedEsent
 NUnit
 PowerThreading
 RhinoMocks
-Rhino.Queues
-Rhino.ServiceBus.References
 structuremap
 structuremap.automocking
