--- a/ripple.config
+++ b/ripple.config
@@ -14,20 +14,22 @@
   </Feeds>
   <Nugets>
     <Dependency Name="Bottles" Version="1.1.0.532" Mode="Float" />
-    <Dependency Name="Common.Logging" Version="2.1.1" Mode="Fixed" />
     <Dependency Name="FubuCore" Version="1.1.0.255" Mode="Float" />
     <Dependency Name="FubuMVC.Core" Version="1.1.0.1540" Mode="Float" />
     <Dependency Name="FubuMVC.StructureMap" Version="1.1.0.1540" Mode="Float" />
     <Dependency Name="FubuTestingSupport" Version="1.1.0.255" Mode="Float" />
     <Dependency Name="HtmlTags" Version="2.0.0.174" Mode="Float" />
+    <Dependency Name="LightningQueues" Version="0.1.0.3" Mode="Float" />
+    <Dependency Name="ManagedEsent" Version="1.8.3.2" Mode="Fixed" />
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
     <Dependency Name="PowerThreading" Version="20120420.0" Mode="Fixed" />
-    <Dependency Name="Rhino.Queues" Version="2.2.0.0" Mode="Float" />
-    <Dependency Name="Rhino.ServiceBus.References" Version="3.1.1.0" Mode="Fixed" />
     <Dependency Name="RhinoMocks" Version="3.6.1" Mode="Fixed" />
     <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" />
     <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" />
   </Nugets>
   <Groups />
+  <References>
+    <IgnoreAssemblies />
+  </References>
   <Nuspecs />
 </ripple>
