--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -93,6 +93,8 @@
     <Compile Include="Runtime\Delayed\DelayedEnvelopeProcessor.cs" />
     <Compile Include="Runtime\Delayed\DelayedEnvelopeReceived.cs" />
     <Compile Include="Polling\PollingJobLogger.cs" />
+    <Compile Include="Runtime\EnvelopeToken.cs" />
+    <Compile Include="Runtime\HeaderWrapper.cs" />
     <Compile Include="Runtime\Invocation\ChainExecutionWatcher.cs" />
     <Compile Include="Runtime\Invocation\InvocationClasses.cs" />
     <Compile Include="Sagas\ISagaRepository.cs" />
