--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecordingChannel.cs" />
     <Compile Include="RecordingReceiver.cs" />
+    <Compile Include="Runtime\Invocation\HandlerPipelineTester.cs" />
     <Compile Include="Runtime\Serializers\BasicJsonMessageSerializerTester.cs" />
     <Compile Include="Runtime\Serializers\BinarySerializerTester.cs" />
     <Compile Include="Runtime\Invocation\CascadingHandlerInvokerTester.cs" />
