--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -97,6 +97,9 @@
     <Compile Include="Runtime\EnvelopeToken.cs" />
     <Compile Include="Runtime\HeaderWrapper.cs" />
     <Compile Include="Runtime\Invocation\ChainExecutionWatcher.cs" />
+    <Compile Include="Runtime\Invocation\DelayedMessageHandler.cs" />
+    <Compile Include="Runtime\Invocation\HandlerPipeline.cs" />
+    <Compile Include="Runtime\Invocation\IHandlerPipeline.cs" />
     <Compile Include="Runtime\Invocation\InvocationClasses.cs" />
     <Compile Include="Sagas\ISagaRepository.cs" />
     <Compile Include="Sagas\ISagaStorage.cs" />
