--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Configuration\ChannelGraph.cs" />
     <Compile Include="Configuration\HandlerPolicies.cs" />
     <Compile Include="Configuration\UriExtensions.cs" />
+    <Compile Include="ErrorHandling\RetryClasses.cs" />
     <Compile Include="HandlerExtensions.cs" />
     <Compile Include="InMemory\AllQueuesInMemoryPolicy.cs" />
     <Compile Include="InMemory\InMemorySagaStorage.cs" />
