implemented the exception matching portion of error handlers

--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -66,7 +66,10 @@
     <Compile Include="Configuration\UriExtensions.cs" />
     <Compile Include="ErrorHandling\Always.cs" />
     <Compile Include="ErrorHandling\ErrorHandler.cs" />
+    <Compile Include="ErrorHandling\ExceptionMatch.cs" />
+    <Compile Include="ErrorHandling\ExceptionMatchExpression.cs" />
     <Compile Include="ErrorHandling\IErrorHandler.cs" />
+    <Compile Include="ErrorHandling\IExceptionMatch.cs" />
     <Compile Include="ErrorHandling\RetryClasses.cs" />
     <Compile Include="HandlerExtensions.cs" />
     <Compile Include="InMemory\AllQueuesInMemoryPolicy.cs" />
