--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Configuration\UriExtensionsTester.cs" />
     <Compile Include="envelope_handlers_are_registered_in_the_right_order.cs" />
     <Compile Include="ErrorHandling\ErrorHandlerTester.cs" />
+    <Compile Include="ErrorHandling\ExceptionMatchingExpression_and_ExpressionMatch_Tester.cs" />
     <Compile Include="FubuTransportRegistry_application_of_policies_Tester.cs" />
     <Compile Include="FubuTransportRegistry_registration_of_services_Tester.cs" />
     <Compile Include="FubuTransport_default_options_Tester.cs" />
