--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -71,6 +71,7 @@
     <Compile Include="ErrorHandling\ExceptionMatchExpression.cs" />
     <Compile Include="ErrorHandling\IErrorHandler.cs" />
     <Compile Include="ErrorHandling\IExceptionMatch.cs" />
+    <Compile Include="ErrorHandling\MoveToErrorQueue.cs" />
     <Compile Include="ErrorHandling\RetryClasses.cs" />
     <Compile Include="HandlerExtensions.cs" />
     <Compile Include="InMemory\AllQueuesInMemoryPolicy.cs" />
