introduced ContinuationContext as a way of making the more complex continuations work cleanly

--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -209,6 +209,7 @@
     <Compile Include="ScenarioSupport\ThreeMessage.cs" />
     <Compile Include="ScenarioSupport\TwoHandler.cs" />
     <Compile Include="ScenarioSupport\TwoMessage.cs" />
+    <Compile Include="TestContinuationContext.cs" />
     <Compile Include="TestSupport\MessageWatcherTester.cs" />
     <Compile Include="TransportActivatorTester.cs" />
     <Compile Include="TransportSettingsTester.cs" />
