--- a/ripple.config
+++ b/ripple.config
@@ -28,5 +28,8 @@
     <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" />
   </Nugets>
   <Groups />
+  <References>
+    <IgnoreAssemblies />
+  </References>
   <Nuspecs />
 </ripple>
