temporarily fixing FubuCore & FubuTestingSupport because of ripple problems, fixing RhinoMocks assertions in the delayed envelope handler

--- a/ripple.config
+++ b/ripple.config
@@ -13,13 +13,8 @@
     <Feed Url="http://packages.nuget.org/v1/FeedService.svc" Mode="Fixed" Stability="ReleasedOnly" />
   </Feeds>
   <Nugets>
-    <Dependency Name="Bottles" Version="1.1.0.532" Mode="Float" />
-    <Dependency Name="FubuCore" Version="1.1.0.255" Mode="Float" />
-    <Dependency Name="FubuMVC.Core" Version="1.1.0.1540" Mode="Float" />
-    <Dependency Name="FubuMVC.StructureMap" Version="1.1.0.1540" Mode="Float" />
-    <Dependency Name="FubuTestingSupport" Version="1.1.0.255" Mode="Float" />
-    <Dependency Name="HtmlTags" Version="2.0.0.174" Mode="Float" />
-    <Dependency Name="LightningQueues" Version="0.1.0.24" Mode="Float" />
+    <Dependency Name="FubuCore" Version="1.1.0.257" Mode="Fixed" />
+    <Dependency Name="FubuTestingSupport" Version="1.1.0.257" Mode="Fixed" />
     <Dependency Name="ManagedEsent" Version="1.8.3.2" Mode="Fixed" />
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
     <Dependency Name="PowerThreading" Version="20120420.0" Mode="Fixed" />
