--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -107,6 +107,8 @@
     <Compile Include="Polling\PollingJobSuccess.cs" />
     <Compile Include="Polling\PollingServicesRegistry.cs" />
     <Compile Include="Polling\RegisterPollingJobs.cs" />
+    <Compile Include="Runtime\Cascading\DelayedResponse.cs" />
+    <Compile Include="Runtime\Cascading\ISendMyself.cs" />
     <Compile Include="Runtime\Delayed\DelayedEnvelopeAddedBackToQueue.cs" />
     <Compile Include="Runtime\Delayed\DelayedEnvelopeProcessor.cs" />
     <Compile Include="Runtime\Delayed\DelayedEnvelopeReceived.cs" />
@@ -132,8 +134,8 @@
     <Compile Include="Runtime\Invocation\SimpleEnvelopeHandler.cs" />
     <Compile Include="Runtime\Invocation\NoSubscriberHandler.cs" />
     <Compile Include="Runtime\Invocation\ResponseEnvelopeHandler.cs" />
-    <Compile Include="Runtime\IOutgoingSender.cs" />
-    <Compile Include="Runtime\OutgoingSender.cs" />
+    <Compile Include="Runtime\Cascading\IOutgoingSender.cs" />
+    <Compile Include="Runtime\Cascading\OutgoingSender.cs" />
     <Compile Include="Sagas\ISagaRepository.cs" />
     <Compile Include="Sagas\ISagaStorage.cs" />
     <Compile Include="Sagas\IStatefulSaga.cs" />
