--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -133,6 +133,7 @@
     <Compile Include="RecordingReceiver.cs" />
     <Compile Include="Runtime\Cascading\DelayedResponseTester.cs" />
     <Compile Include="Runtime\Cascading\OutgoingSenderTester.cs" />
+    <Compile Include="Runtime\Cascading\RespondToSenderTester.cs" />
     <Compile Include="Runtime\Invocation\ChainExecutionEnvelopeHandlerTester.cs" />
     <Compile Include="Runtime\Invocation\ChainFailureContinuationTester.cs" />
     <Compile Include="Runtime\Invocation\ChainSuccessContinuationTester.cs" />
