--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -99,6 +99,7 @@
     <Compile Include="ErrorHandling\ExceptionMatchingExpression_and_ExpressionMatch_Tester.cs" />
     <Compile Include="ErrorHandling\MovetoErrorQueueTester.cs" />
     <Compile Include="ErrorHandling\RequeueContinuationTester.cs" />
+    <Compile Include="Events\ExpiringListenerCleanupTester.cs" />
     <Compile Include="FubuTransportRegistry_application_of_policies_Tester.cs" />
     <Compile Include="FubuTransportRegistry_registration_of_services_Tester.cs" />
     <Compile Include="FubuTransport_default_options_Tester.cs" />
