added a deactivator to shutdown the channels.  Closes GH-23

--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Runtime\Cascading\DelayedResponse.cs" />
     <Compile Include="Runtime\Cascading\ISendMyself.cs" />
     <Compile Include="Runtime\Cascading\RespondToSender.cs" />
+    <Compile Include="Runtime\ChannelShutdownDeactivator.cs" />
     <Compile Include="Runtime\Delayed\DelayedEnvelopeAddedBackToQueue.cs" />
     <Compile Include="Runtime\Delayed\DelayedEnvelopeProcessor.cs" />
     <Compile Include="Runtime\Delayed\DelayedEnvelopeReceived.cs" />
