pushed through the end of the new IEventPublisher story for FubuMVC/FubuTransportation apps.  Closes GH-74

--- a/src/FubuTransportation.Testing/ripple.dependencies.config
+++ b/src/FubuTransportation.Testing/ripple.dependencies.config
@@ -2,10 +2,13 @@ Bottles
 FubuCore
 FubuLocalization
 FubuMVC.Core
+FubuMVC.Katana
+FubuMVC.OwinHost
 FubuMVC.StructureMap
 FubuTestingSupport
 HtmlTags
 NUnit
+Owin
 RhinoMocks
 structuremap
 structuremap.automocking
