--- a/ripple.config
+++ b/ripple.config
@@ -14,9 +14,12 @@
   </Feeds>
   <Nugets>
     <Dependency Name="FubuCore" Version="1.1.0.257" Mode="Fixed" />
+    <Dependency Name="FubuMVC.Katana" Version="1.1.0.1543" Mode="Float" />
+    <Dependency Name="FubuMVC.OwinHost" Version="1.1.0.1543" Mode="Float" />
     <Dependency Name="FubuTestingSupport" Version="1.1.0.257" Mode="Fixed" />
     <Dependency Name="ManagedEsent" Version="1.8.3.2" Mode="Fixed" />
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
+    <Dependency Name="Owin" Version="1.0.0.0" Mode="Fixed" />
     <Dependency Name="PowerThreading" Version="20120420.0" Mode="Fixed" />
     <Dependency Name="RhinoMocks" Version="3.6.1" Mode="Fixed" />
     <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" />
