converted to FubuCore 1.2 and FubuMVC.Core 1.2

--- a/ripple.config
+++ b/ripple.config
@@ -13,7 +13,8 @@
     <Feed Url="http://packages.nuget.org/v1/FeedService.svc" Mode="Fixed" Stability="ReleasedOnly" />
   </Feeds>
   <Nugets>
-    <Dependency Name="FubuCore" Version="1.1.0.257" Mode="Fixed" />
+    <Dependency Name="FubuCore" Version="1.2" Mode="Float" />
+    <Dependency Name="FubuMVC.Core" Version="1.2" Mode="Float" />
     <Dependency Name="FubuMVC.Katana" Version="1.1.0.1543" Mode="Float" />
     <Dependency Name="FubuMVC.OwinHost" Version="1.1.0.1543" Mode="Float" />
     <Dependency Name="FubuTestingSupport" Version="1.1.0.257" Mode="Fixed" />
