--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -119,6 +119,7 @@
     <Compile Include="ErrorHandling\RequeueContinuationTester.cs" />
     <Compile Include="Events\ExpiringListenerCleanupTester.cs" />
     <Compile Include="FubuTransportRegistry_application_of_policies_Tester.cs" />
+    <Compile Include="FubuTransportRegistry_default_handler_source_policies_spec.cs" />
     <Compile Include="FubuTransportRegistry_registration_of_services_Tester.cs" />
     <Compile Include="FubuTransport_default_options_Tester.cs" />
     <Compile Include="FubuTransportRegistry_HandlerSource_registration_Tester.cs" />
